--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@react-rxjs/core": "^0.5.0",
+    "@react-rxjs/utils": "^0.3.0",
     "axios": "^0.20.0",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
@@ -15,7 +17,8 @@
     "react-grid-layout": "^1.1.1",
     "react-hook-form": "^6.9.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
